changed opacity and title

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hello | Personal vCard Template </title>
+    <title>Hello | I'm Francis </title>
     <meta name="description" content="" />
     <meta name="author" content="" />
     <link rel="icon" href="images/favicon.ico" />
