--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <title>Hello | I'm Francis </title>
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <link rel="icon" href="images/favicon.ico" />
+    <link rel="icon" href="images/iconf.jpg" />
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" />
