changed contact details

--- a/index.html
+++ b/index.html
@@ -71,10 +71,8 @@
                             <div class="col-md-5">
                                 <ul class="info-list">
                                     <li><strong>Name : </strong>Francis Redido</li>
-                                    <li><strong>Date of birth : </strong> October 16 , 1990 </li>
                                     <li><strong>Address : </strong>Huntington Beach, CA</li>
-                                    <li><strong>Email : </strong> sicnarfodider@hotmail.com</li>
-                                    <li><strong>Interest : </strong>coding, video games and movies</li>
+                                    <li><strong>Interest : </strong>coding, jazzy hiphop,video games and movies</li>
                                 </ul>
                             </div>
                         </div>
