added profile about me and mock photo

--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
             <div class="name-block">
                 <div class="name-block-container">
                     <h1><span>Please to meet you, I'm</span>Francis Redido</h1>
-                    <h2>Web Developer</h2>
+                    <h2>Front End Developer</h2>
                     <a class="btn btn-download">Download Resume</a>
                     <ul class="social">
-                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                        <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/sicnarfodider"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/fredido/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -64,22 +63,26 @@
                     <div class="block-content">
                         <h3 class="block-title">Profile</h3>
                         <div class="row">
+                            <div class="col-md-12">
+                                <img class="sign" src="images/iconf.jpg" alt="" />
+                            </div>
+                        </div>
+                        <div class="row">
                             <div class="col-md-7">
-                                <p>Sed ut perspiciatis unde omnis iste natus errorsit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-                                <p>Sed ut perspiciatis unde omnis iste natus errorsit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
+                                <p>A nursing graduate turned web developer looking for opportunities to
+                                    create interactive and eye catching web pages for your business. After working for a couple of years in the healthcare industry
+                                    I decided that it wasn't the right long term path for me. So I got back to my old curiousity in coding that I had when I was in college.
+                                    It was not long after I got back into it that I accelerated my learning by getting in a coding bootcamp. Spending day and night
+                                    dabbling with code and building apps with amazing people.
+                                </p>
+                                <p>Aside from coding I enjoy playing video games or watching streams of it. You can also find me listening to mellow/jazzy hiphop and comedy albums</p>
                             </div>
                             <div class="col-md-5">
                                 <ul class="info-list">
                                     <li><strong>Name : </strong>Francis Redido</li>
                                     <li><strong>Address : </strong>Huntington Beach, CA</li>
-                                    <li><strong>Interest : </strong>coding, jazzy hiphop,video games and movies</li>
                                 </ul>
                             </div>
-                        </div>
-                        <div class="row">
-                        	<div class="col-md-12">
-                        		<img class="sign" src="images/signature.png" alt="" />
-                        	</div>
                         </div>
                     </div>
                     <div class="block-content skills">
