--- a/index.html
+++ b/index.html
@@ -88,126 +88,44 @@
                     <div class="block-content skills">
                         <h3 class="block-title">Skills</h3>
                         <div class="row">
-                            <div class="col-md-6">
-                                <h4>Languages/Frameworks</h4>
+                            <div class="text-center col-md-12">
+                                <h4>Languages and Tools</h4>
                                 <div class="row">
-                                    <div class="col-sm-6 col-xs-6">
-                                        <h4>STRONG</h4>
-                                        <ul class="icon-list">
-                                            <li>HTML5</li>
-                                            <li>CSS3</li>
-                                            <li>JAVASCRIPT</li>
-                                            <li>jQuery</li>
-                                        </ul>
+                                    <div class="icon-container col-sm-12 col-xs-12">
+                                        <img title="HTML5" class="icons" src="./images/icons/html5-original-wordmark.svg" Alt="HTML5"/>
+                                        <img title="CSS3" class="icons" src="./images/icons/css3-original-wordmark.svg" Alt="CSS3"/>
+                                        <img title="JavaScript" class="icons" src="./images/icons/javascript-original.svg" Alt="Javascript"/>
+                                        <img title="jQuery" class="icons" src="./images/icons/jquery-original-wordmark.svg" Alt="jQuery"/>
                                     </div>
-                                    <div class="col-sm-6 col-xs-6">
-                                        <h4>EXPERIENCED</h4>
-                                        <ul class="icon-list">
-                                            <li>BOOTSTRAP3</li>
-                                            <li>REACT.JS</li>
-                                            <li>PHP</li>
-                                            <li>NODE.JS</li>
-                                        </ul>
+                                    <div class="icon-container col-sm-12 col-xs-12">
+                                        <img title="React" class="icons" src="./images/icons/react-original-wordmark.svg" Alt="React"/>
+                                        <img title="Redux" class="icons" src="./images/icons/redux-original-wordmark.svg" Alt="Redux"/>
+                                        <img title="Bootstrap" class="icons" src="./images/icons/bootstrap-plain-wordmark.svg" Alt="Bootstrap"/>
+                                        <img title="MaterializeCSS" class="icons" src="./images/icons/materialize.svg" Alt="materialize"/>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <h4>Know-how</h4>
-                                <div class="row">
-                                    <div class="col-sm-6 col-xs-6">
-                                        <ul class="icon-list">
-                                            <li>Object Oriented Programming(OOP)</li>
-                                            <li>Model View Controller(MVC)</li>
-                                            <li>Mobile First Design</li>
-                                            <li>UI and UX Design</li>
-                                        </ul>
+                                    <div class="icon-container col-sm-12 col-xs-12">
+                                        <img title="Node Package Manager" class="icons" src="./images/icons/npm-original-wordmark.svg" Alt="NPM"/>
+                                        <img title="NodeJs" class="icons" src="./images/icons/nodejs-original-wordmark.svg" Alt="NodeJs"/>
+                                        <img title="MySQL" class="icons" src="./images/icons/mysql-original-wordmark.svg" Alt="MySQL"/>
+                                        <img title="Amazon Web Services" class="icons" src="./images/icons/amazonwebservices-original-wordmark.svg" Alt="Amazon Web Services"/>
+                                    </div>
+                                    <div class="icon-container col-sm-12 col-xs-12">
+                                        <img title="Github"  class="icons" src="./images/icons/github-original-wordmark.svg" Alt="Github"/>
+                                        <img title="Atom"  class="icons" src="./images/icons/atom-original.svg" Alt="Atom"/>
+                                        <img title="Chrome Dev Tools"  class="icons" src="./images/icons/chromedevtools.svg" Alt="Chrome"/>
+                                        <img title="PHPStorm"  class="icons" src="./images/icons/phpstorm-original-wordmark.svg" Alt="phpstorm"/>
+                                        <img title="Slack"  class="icons" src="./images/icons/slack-original-wordmark.svg" Alt="slack"/>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="block-content ">
-                        <h3 class="block-title">Experience</h3>
-                        <div class="timeline experience">
-                            <div class="row ">
-                                <div class="col-md-12">
-                                    <div class="exp-holder">
-                                        <div class="exp">
-                                            <div class="hgroup">
-                                                <h4>WebDesigner – Mutation Media </h4>
-                                                <h5>Feb 2015 - <span class="current">Current</span></h5>
-                                            </div>
-                                            <p>Ut enim ad minim veniam, quis nostrud exerc. Irure dolor in reprehend incididunt labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                                        </div>
-                                        <div class="exp">
-                                            <div class="hgroup">
-                                                <h4>Web Developer – Mutation Media </h4>
-                                                <h5>Sept 2015 - Nov 2015</h5>
-                                            </div>
-                                            <p>Ut enim ad minim veniam, quis nostrud exerc. Irure dolor in reprehend incididunt labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                                        </div>
-                                        <div class="exp">
-                                            <div class="hgroup">
-                                                <h4>SDK Developer – Mutation Media </h4>
-                                                <h5>May 2015 - Sept 2015</h5>
-                                            </div>
-                                            <p>Ut enim ad minim veniam, quis nostrud exerc. Irure dolor in reprehend incididunt labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="block-content">
-                        <h3 class="block-title">Education</h3>
-                        <div class="timeline education">
-                            <div class="row ">
-                                <div class="col-md-12">
-                                    <div class="exp-holder">
-                                        <div class="exp">
-                                            <div class="hgroup">
-                                                <h4>LearningFuze - 12 Week Full Immersion Program </h4>
-                                                <h5>October 2017-January 2018</h5>
-                                            </div>
-                                            <p>Ut enim ad minim veniam, quis nostrud exerc. Irure dolor in reprehend incididunt labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                                        </div>
-                                        <div class="exp">
-                                            <div class="hgroup">
-                                                <h4>Bachelor of Science in Nursing</h4>
-                                                <h5>Jun 2009-April 2012</h5>
-                                            </div>
-                                            <p>Ut enim ad minim veniam, quis nostrud exerc. Irure dolor in reprehend incididunt labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="block-content">
-                        <h3 class="block-title">Services</h3>
-                        <div class="row">
-                            <div class="col-md-4 col-sm-6 service">
-                                <div class="service-icon">
-                                    <i class=" fa fa-pencil"></i>
-                                </div>
-                                <h4>Web Design</h4>
-                                <p>Ne cum invidunt constituto, sanctus accusam an usu, ea mandamus incorrupte mel. Pro cu purto graeco. Wisi sonet elitr eos in. </p>
-                            </div>
-                            <div class="col-md-4 col-sm-6 service">
-                                <div class="service-icon">
-                                    <i class=" fa fa-building"></i>
-                                </div>
-                                <h4>App Development</h4>
-                                <p>Ne cum invidunt constituto, sanctus accusam an usu, ea mandamus incorrupte mel. Pro cu purto graeco. Wisi sonet elitr eos in. </p>
                             </div>
                         </div>
                     </div>
                     <div class="block-content">
                         <div class="row text-center">
                             <div class="col-md-12 btn-email">
-                                <a class="btn lowercase">hello@example.com</a>
+                                <a class="btn lowercase">redidofrancis07@gmail.com</a>
                                 <br/>
-                                <small>I am available for freelance</small>
+                                <small>Ready for opportunities</small>
                             </div>
                         </div>
                     </div>
