added new template for portfolio pages

--- a/index.html
+++ b/index.html
@@ -144,17 +144,17 @@
                                 </ul>
                                 <div id="projects">
                                     <div class="project graphic apps">
-                                        <a class="open-project" href="project-1.html">
+                                        <a class="open-project" data-toggle="modal" page="final.html" href="#projet-modal"/>
                                             <div class="project-overlay">
                                                 <div class="vcenter">
                                                     <div class="centrize">
-                                                        <h4>Luxury Watch</h4>
-                                                        <p>Graphic / Apps</p>
+                                                        <h4>Final Transmissions</h4>
+                                                        <p>Learn More</p>
                                                     </div>
                                                 </div>
                                             </div>
                                         </a>
-                                        <img src="images/portfolio/1.jpg" alt="">
+                                        <img src="images/portfolio/final.png" alt="final transmission landing page">
                                     </div>
                                     <div class="project web apps">
                                         <a class="open-project" href="project-2.html">
@@ -240,7 +240,7 @@
                         <div class="row text-center">
                             <div class="col-md-12">
                                 <h4>Interested in working together?</h4>
-                                <a class="btn lowercase">hello@example.com</a>
+                                <a class="btn lowercase">redidofrancis07@gmail.com</a>
                                 <br/>
                             </div>
                         </div>
@@ -268,7 +268,7 @@
                                     </div>
                                     <div class="contact-details">
                                         <h5>Inquire@</h5>
-                                        <p>hello@example.com</p>
+                                        <p>redidofrancis07@gmail.com</p>
                                     </div>
                                 </div>
                             </div>
@@ -292,6 +292,7 @@
                     </div>
                 </section>
             </div>
+            <div class="modal-container"></div>
         </div>
     </section>
     <script src="js/jquery.min.js"></script>
