added new photos for portfolio and deleted unused blocks

--- a/final.html
+++ b/final.html
@@ -6,13 +6,14 @@
         <div class="modal fade" id="project-modal">
             <div class="inline-menu-container">
                 <a id="modal-close" class="close" data-dismiss="modal"><span aria-hidden="true">BACK</span></a>
-            </div><div class="modal-dialog">
+            </div>
+            <div class="modal-dialog">
                 <div class="modal-content">
                     <header>
                         <h2>Final Transmissions</h2>
                         <small>A ghost themed augmented reality app utilizing webRTC, AR, Geolocation, and proximity based sound.</small>
                     </header>
-                    <figure>
+                    <section>
                         <div class="summary">
                             <h4>Technologies Used</h4>
                             <p><strong>Languages:</strong> HTML5, CSS3, JavaScript, NodeJs </p>
@@ -22,7 +23,7 @@
                             <img src="images/portfolio/final.png" Alt="Final Transmissions Landing Page"/>
                             <figurecaption><a href="https://github.com/unleashalicia/c10.17_ghost_stories" target="_blank"> Source Code </a> | <a href="https://finaltransmissions.com" target="_blank"> Live Version </a></figcaption>
                         </figure>
-                    </figure>
+                    </section>
                 </div>
             </div>
         </div>
