--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
                                 <ul id="filters">
                                     <li class="active" data-filter="*">All</li>
                                     <li data-filter=".web">Web</li>
-                                    <li data-filter=".apps">Apps</li>
+                                    <li data-filter=".games">Games</li>
                                 </ul>
                                 <div id="projects">
-                                    <div class="project graphic apps">
-                                        <a class="open-project" data-toggle="modal" page="final.html" href="#projet-modal"/>
+                                    <div class="project web apps">
+                                        <a class="open-project" data-toggle="modal" page="final.html" href="#project-modal"/>
                                             <div class="project-overlay">
                                                 <div class="vcenter">
                                                     <div class="centrize">
@@ -156,83 +156,44 @@
                                         </a>
                                         <img src="images/portfolio/final.png" alt="final transmission landing page">
                                     </div>
-                                    <div class="project web apps">
-                                        <a class="open-project" href="project-2.html">
+                                    <div class="project web games">
+                                        <a class="open-project" data-toggle="modal"  page="trivia.html" href="#project-modal">
                                             <div class="project-overlay">
                                                 <div class="vcenter">
                                                     <div class="centrize">
-                                                        <h4>Colorful Tees</h4>
-                                                        <p>Web / Apps</p>
+                                                        <h4>Trivia Fighter</h4>
+                                                        <p>Learn More</p>
                                                     </div>
                                                 </div>
                                             </div>
                                         </a>
-                                        <img src="images/portfolio/2.jpg" alt="">
+                                        <img src="images/portfolio/trivia.png" alt="Trivia Fighter">
                                     </div>
-                                    <div class="project graphic video">
+                                    <div class="project web games">
                                         <a class="open-project" href="project-1.html">
                                             <div class="project-overlay">
                                                 <div class="vcenter">
                                                     <div class="centrize">
-                                                        <h4>Coffee Cups</h4>
-                                                        <p>Graphic / Video</p>
+                                                        <h4>Mass Effect Memory Match</h4>
+                                                        <p>Learn More</p>
                                                     </div>
                                                 </div>
                                             </div>
                                         </a>
-                                        <img src="images/portfolio/3.jpg" alt="">
+                                        <img src="images/portfolio/mass.png" alt="">
                                     </div>
-                                    <div class="project graphic">
+                                    <div class="project web games">
                                         <a class="open-project" href="project-1.html">
                                             <div class="project-overlay">
                                                 <div class="vcenter">
                                                     <div class="centrize">
-                                                        <h4>Stationary Branding</h4>
-                                                        <p>Web</p>
+                                                        <h4>Wild West-thello</h4>
+                                                        <p>Learn More</p>
                                                     </div>
                                                 </div>
                                             </div>
                                         </a>
-                                        <img src="images/portfolio/4.jpg" alt="">
-                                    </div>
-                                    <div class="project web video">
-                                        <a class="open-project" href="project-2.html">
-                                            <div class="project-overlay">
-                                                <div class="vcenter">
-                                                    <div class="centrize">
-                                                        <h4>Typewriter</h4>
-                                                        <p>Graphic / Video</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <img src="images/portfolio/5.jpg" alt="">
-                                    </div>
-                                    <div class="project apps web">
-                                        <a class="open-project" href="project-1.html">
-                                            <div class="project-overlay">
-                                                <div class="vcenter">
-                                                    <div class="centrize">
-                                                        <h4>Magazine Cover</h4>
-                                                        <p>Web / Apps</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <img src="images/portfolio/6.jpg" alt="">
-                                    </div>
-                                    <div class="project video web">
-                                        <a class="open-project" href="project-1.html">
-                                            <div class="project-overlay">
-                                                <div class="vcenter">
-                                                    <div class="centrize">
-                                                        <h4>An Ipad</h4>
-                                                        <p>Video / Web</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <img src="images/portfolio/7.jpg" alt="">
+                                        <img src="images/portfolio/othello.png" alt="">
                                     </div>
                                 </div>
                             </div>
