--- a/trivia.html
+++ b/trivia.html
@@ -12,20 +12,20 @@
                         <h2>Trivia Fighter</h2>
                         <small>A fighting game with a core trivia mechanic, using WEB APIs.</small>
                     </header>
-                    <figure>
+                    <section>
                         <div class="summary">
                             <h4>Technologies Used</h4>
                             <p><strong>Languages:</strong> HTML5, CSS3, JavaScript</p>
                             <p><strong>API Used:</strong>
                                 <a href="http://www.superheroapi.com/" target="_blank"> Superhero API</a>
                                 <a href="https://opentdb.com/" target="_blank"> Open Trivia DB API</a>
-                                <a href="https://api.chucknorris.io/" target="_blank"> Chuck Norris API</a>  
+                                <a href="https://api.chucknorris.io/" target="_blank"> Chuck Norris API</a>
                             </p>
                         </div>
                         <figure>
-                            <img src="images/portfolio/final.png" Alt="Final Transmissions Landing Page"/>
-                            <figurecaption><a href="https://github.com/unleashalicia/c10.17_ghost_stories" target="_blank"> Source Code </a> | <a href="https://finaltransmissions.com" target="_blank"> Live Version </a></figcaption>
-                        </figure>
+                            <img src="images/portfolio/trivia.png" Alt="Trivia Fighter Screenshot"/>
+                            <figurecaption><a href="https://github.com/sloumdrone/c10.17hacka-thello-thon" target="_blank"> Source Code </a> | <a href="https://finaltransmissions.com" target="_blank"> Live Version </a></figcaption>
+                        </section>
                     </figure>
                 </div>
             </div>
