added link to resume

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="name-block-container">
                     <h1><span>Please to meet you, I'm</span>Francis Redido</h1>
                     <h2>Front End Developer</h2>
-                    <a class="btn btn-download">Download Resume</a>
+                    <a href="resumefrancis.pdf" class="btn btn-download">Download Resume</a>
                     <ul class="social">
                         <li><a href="https://github.com/sicnarfodider" target="_blank"><i class="fa fa-github"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/fredido/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
