change project img, code link and live link for triviaFighter, added favicons for source and live

--- a/final.html
+++ b/final.html
@@ -25,7 +25,12 @@
                         </div>
                         <figure>
                             <img src="images/portfolio/final.png" Alt="Final Transmissions Landing Page"/>
-                            <figurecaption><a href="https://github.com/unleashalicia/c10.17_ghost_stories" target="_blank"> Source Code </a> | <a href="https://finaltransmissions.com" target="_blank"> Live Version </a></figcaption>
+                            <figurecaption><a href="https://github.com/unleashalicia/c10.17_ghost_stories" target="_blank">
+                                <i class="fab fa-github"></i>
+                                Source Code </a> | <a href="" target="_blank">
+                                <i class="fas fa-paper-plane"></i>
+                                Live Version </a>
+                            </figcaption>
                         </figure>
                     </main>
                 </div>
