--- a/memory_match.html
+++ b/memory_match.html
@@ -23,7 +23,12 @@
                         </div>
                         <figure>
                             <img src="images/portfolio/mass.png" Alt="Mass Effect Memory Match Screenshot"/>
-                            <figurecaption><a href="https://github.com/sicnarfodider/react_memory_match" target="_blank"> Source Code </a> | <a href="" target="_blank"> Live Version </a></figcaption>
+                            <figurecaption><a href="https://github.com/sicnarfodider/react_memory_match" target="_blank">
+                                <i class="fab fa-github"></i>
+                                Source Code </a> | <a href="" target="_blank">
+                                <i class="fas fa-paper-plane"></i>
+                                Live Version </a>
+                            </figcaption>
                         </figure>
                     </main>
                 </div>
