--- a/othello.html
+++ b/othello.html
@@ -23,7 +23,12 @@
                         </div>
                         <figure>
                             <img src="images/portfolio/othello.png" Alt="Othello Screenshot"/>
-                            <figurecaption><a href="https://github.com/sicnarfodider/c10.17hacka-thello-thon" target="_blank"> Source Code </a> | <a href="" target="_blank"> Live Version </a></figcaption>
+                            <figurecaption><a href="https://github.com/sicnarfodider/c10.17hacka-thello-thon" target="_blank">
+                                <i class="fab fa-github"></i>
+                                Source Code </a> | <a href="" target="_blank">
+                                <i class="fas fa-paper-plane"></i>
+                                Live Version </a>
+                             </figcaption>
                         </main>
                     </figure>
                 </div>
