--- a/trivia.html
+++ b/trivia.html
@@ -19,15 +19,20 @@
                             <div class="project-tools">
                                 <p><strong>Languages:</strong> HTML5, CSS3, JavaScript</p>
                                 <p><strong>API Used:</strong>
-                                    <a href="http://www.superheroapi.com/" target="_blank"> Superhero API</a>
-                                    <a href="https://opentdb.com/" target="_blank"> Open Trivia DB API</a>
+                                    <a href="http://www.superheroapi.com/" target="_blank"> Superhero API,</a>
+                                    <a href="https://opentdb.com/" target="_blank"> Open Trivia DB API,</a>
                                     <a href="https://api.chucknorris.io/" target="_blank"> Chuck Norris API</a>
                                 </p>
                             </div>
                         </div>
                         <figure>
                             <img src="images/portfolio/trivia.png" Alt="Trivia Fighter Screenshot"/>
-                            <figurecaption><a href="https://github.com/sloumdrone/C10.17Hackathon" target="_blank"> Source Code </a> | <a href="" target="_blank"> Live Version </a></figcaption>
+                            <figurecaption><a href="https://github.com/sicnarfodider/triviaFighter" target="_blank">
+                                <i class="fab fa-github"></i>
+                                Source Code </a> | <a href="triviafighter.redidofrancis.space" target="_blank">
+                                <i class="fas fa-paper-plane"></i>
+                                Live Version </a>
+                            </figcaption>
                         </figure>
                     </main>
                 </div>
